<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_pokedex"
            android:icon="@drawable/ic_pokeball_bottom_nav"
            android:title="@string/title_pokedex"/>

    <item
            android:id="@+id/navigation_time"
            android:icon="@drawable/ic_list"
            android:title="@string/title_time"/>

    <item
            android:id="@+id/navigation_mapa"
            android:icon="@drawable/ic_pokemon_map"
            android:title="@string/title_mapa"/>
    <item
            android:id="@+id/navigation_trader"
            android:icon="@drawable/ic_trade"
            android:title="@string/title_trader"/>


    <item
            android:id="@+id/navigation_sobre"
            android:icon="@drawable/ic_about"
            android:title="@string/title_sobre"/>

</menu>